# QDashboard

./: .gitignore  CMakeLists.txt  CustomPrg.qml  Main.qml  README.md  main.cpp
